# SUITS-26

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  NOTES.md  README copy.md  README.md  RUN.md  RUN_LOCAL.md  RUN_TSS_JAVA_NO_DOCKER.md  WEBSOCKET_USAGE.md  docker-compose.full-stack.yaml  docker-compose.yaml  docker-compose.yml  example_client.py  index.html  package-lock.json  package.json  server.py  system.md  udp_client_example.py  udp_server.py
JavaBackend/: Dockerfile  README.md  pom.xml  sample.db  test_live_telemetry_ws.py  test_mission_telemetry_ws.py
PythonBackend/: Dockerfile  README.md  pyproject.toml  start_server.py
TSS/: Dockerfile  README.md  build.bat  server.c  server_data.c  server_data.h
TSS/data/: EVA.json  LTV.json  (+2 more)
backend/: .env  .env.competition  .env.example  README.md  requirements.txt  run_aia.py
docs/: AIA-STANDALONE.md  DEMO_GUIDE.md  DEMO_GUIDE.zh-CN.md  EVA_README.md
frontend/: .env.development  README.md  index.html  package-lock.json  package.json  vite.config.js
patches/: tss-fix.patch
pythonbackend/: Dockerfile  README.md  pyproject.toml
pythonbackend/python_server/: api.py  commands.py  main.py  run_server.py  test_tss.py
pythonbackend/python_server/RoverAgents/: Navigator.py  RobustNavigator.py  RoverAgent.py  Scanner.py  helper_functions.py  test_nav.py  test_robust_navigator.py
pythonbackend/python_server/helper_folder/: Astar.py  GraphSampler.py  Node.py  commands.py  helper_functions.py  testDust.py
pythonbackend/testingScripts/: testAddVoice.py
scripts/: aia-preflight.py  aia-start.sh  aia-stop.sh
(+262 files in other folders)
